# Actividades-POO-Facundo-Zampetti

./: .gitignore  README.md
Actividad 1 (11 de marzo)/: README.md  README.rst
Actividad 1 (11 de marzo)/Ejercicio1 (calculadora combustible) FACUNDO ZAMPETTI/calculadora-combustible/: script.js
Actividad 10 (27 de abril)/: README.md
Actividad 2 (16 de marzo)/: README.md
Actividad 2 (16 de marzo)/Ejercicio2 (login) FACUNDO ZAMPETTI/: docker-compose.yml
Actividad 2 (16 de marzo)/Ejercicio2 (login) FACUNDO ZAMPETTI/backend/: main.py
Actividad 2 (16 de marzo)/Ejercicio2 (login) FACUNDO ZAMPETTI/frontend/LoginApp/: CMakeLists.txt
Actividad 3 (25 de marzo)/: README.md
Actividad 3 (25 de marzo)/Ejercicio3 (planificador TPs) FACUNDO ZAMPETTI/TPPlanner/: CMakeLists.txt  loginwindow.cpp  sessionmanager.h  task.cpp  task.h  taskdialog.cpp  taskdialog.h  taskmanager.cpp  taskmanager.h
Actividad 4 (30 de marzo)/: README.md
Actividad 4 (30 de marzo)/Ejercicio 02 - Panel de monitoreo VPS/: PanelMonitoreoVPS.pro  README.md
Actividad 4 (30 de marzo)/Ejercicio 02 - Panel de monitoreo VPS/server/: health_endpoint.py
Actividad 4 (30 de marzo)/Ejercicio 02 - Panel de monitoreo VPS/src/: MonitorService.cpp
Actividad 4 (30 de marzo)/Ejercicio4 (monitoreo VPS) FACUNDO ZAMPETTI/Ejercicio02PanelVPS/: PanelMonitoreoVPS.pro
Actividad 5 (1 de abril)/: README.md
Actividad 5 (1 de abril)/Ejercicio5 (lienzo) FACUNDO ZAMPETTI/Ejercicio5/: Makefile.Debug  canvaswidget.cpp  canvaswidget.h  drawingmodel.cpp  drawingmodel.h  main.cpp  mainwindow.cpp  realtimesyncservice.cpp  realtimesyncservice.h  syncservice.cpp  syncservice.h
Actividad 6 (8 de abril)/: README.md
Actividad 6 (8 de abril)/Ejercicio04_Kanban/qt_client/: config.example.json  config.json  main.py
Actividad 6 (8 de abril)/Ejercicio6 (kanban) FACUNDO ZAMPETTI/Ejercicio04_Kanban/: README.md  run_backend.ps1  run_client.ps1
Actividad 7 (20 de abril)/: README.md
Actividad 7 (20 de abril)/Ejercicio7 (login sin qtdesigner) FACUNDO ZAMPETTI/Login/: Login.pro  login.cpp  login.h  main.cpp
Actividad 8 (20 de abril)/: README.md
Actividad 8 (20 de abril)/Ejercicio8 (login con qtdesigner) FACUNDO ZAMPETTI/LoginQTDesigner/: LoginQTDesigner.pro  login.cpp  login.ui  main.cpp
Actividad 9 (22 de abril)/: README.md
Actividad 9 (22 de abril)/Ejercicio9 (login clima) FACUNDO ZAMPETTI/Ejercicio07_Clima/: CMakeLists.txt  config.ini
Actividad 9 (22 de abril)/Ejercicio9 (login clima) FACUNDO ZAMPETTI/Ejercicio07_Clima/src/: appcontroller.cpp  appcontroller.h  clima.cpp  clima.h  configuracion.cpp  configuracion.h  downloaderfondo.cpp  logger.cpp  logger.h  login.cpp  login.h  main.cpp  pantalla.h  ventana.h
Actividad01 (11 de marzo)/: README.md
Actividad01 (11 de marzo)/Ejercicio1 (calculadora combustible) FACUNDO ZAMPETTI/calculadora-combustible/: index.html  style.css
Actividad02 (16 de marzo)/Ejercicio2 (login) FACUNDO ZAMPETTI/: Dockerfile
Actividad03 (25 de marzo)/: README.md
Actividad03 (25 de marzo)/Ejercicio3 (planificador TPs) FACUNDO ZAMPETTI/TPPlanner/: CMakeLists.txt  TPPlanner.pro  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  sessionmanager.cpp  sessionmanager.h  task.h  taskdialog.cpp  taskmanager.cpp  taskmanager.h  users.json
Actividad05 (1 de abril)/: README.md
Actividad08 (20 de abril)/: README.md
Actividad09 (22 de abril)/: README.md
Actividad10 (27 de abril)/Ejercicio10 (editor multilenguaje) FACUNDO ZAMPETTI/Ejercicio08_EditorMultilenguaje/: CMakeLists.txt  Ejercicio08_EditorMultilenguaje.pro  README.md  config.ini
Actividad10 (27 de abril)/Ejercicio10 (editor multilenguaje) FACUNDO ZAMPETTI/Ejercicio08_EditorMultilenguaje/src/: appconfig.cpp  appconfig.h  application_controller.cpp  application_controller.h  blocked_screen.cpp  blocked_screen.h  editor_screen.cpp  editor_screen.h  logger.cpp  logger.h  login_screen.cpp  login_screen.h  main.cpp  pantalla.cpp  pantalla.h  validadores.cpp  validadores.h
Actividad11 (29 de abril)/: README.md
Actividad11 (29 de abril)/Ejercicio11 (BD coordenadas) FACUNDO ZAMPETTI/Ejercicio9_BD/: CMakeLists.txt  Ejercicio09_CoordenadasBD.pro
Actividad11 (29 de abril)/Ejercicio11 (BD coordenadas) FACUNDO ZAMPETTI/Ejercicio9_BD/resources/: dark_tech.qss  resources.qrc
Actividad11 (29 de abril)/Ejercicio11 (BD coordenadas) FACUNDO ZAMPETTI/Ejercicio9_BD/src/: database.cpp  database.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  pintura.cpp  pintura.h
Actividad12 (18 de mayo)/: README.md
(+89 files in other folders)
